# my_local_assistant

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: rag_cli.py  test_llm_direct.py  test_vector_store.py
examples/test_chroma_db/: chroma.sqlite3
my_local_assistant/: __init__.py
my_local_assistant/cli/: __init__.py  dev.ipynb  rag_cli.py
my_local_assistant/core/: __init__.py  assistant.py  llm_handler.py  vector_store.py
rag_cli_chroma_db/: chroma.sqlite3
