# pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_local_assistant_framework" # Choose a unique name for PyPI
version = "0.1.0" # Start with an early version
authors = [
    { name = "Lawal Abdulazeez Faruq", email = "Lawalabdulazeezfaruq@gmail.com" },
]
description = "A framework for creating local, personal AI assistants."
readme = "README.md" # You'll need to create/update this
requires-python = ">=3.8" # Specify your minimum Python version
license = { text = "MIT License" } # Or choose another license like Apache-2.0
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "llama-cpp-python>=0.2.0", # Specify reasonable minimum versions
    "sentence-transformers>=2.2.0",
    "chromadb>=0.4.0",
    "pypdf>=3.0.0",         # For PDF handling in vector_store
    "python-docx>=1.0.0",   # For DOCX handling in vector_store
    # Add other direct dependencies your library code has
]

[project.urls]
Homepage = "https://github.com/Lawal0abdulazeez/my_local_assistant" # Replace with your repo URL
Repository = "https://github.com/Lawal0abdulazeez/my_local_assistant"

# Optional: Define command-line scripts
[project.scripts]
my-rag-assistant-cli = "my_local_assistant.cli.rag_cli:main_cli_loop_entry"